--- a/Clon-Pinterest/estilos.css
+++ b/Clon-Pinterest/estilos.css
@@ -15,38 +15,33 @@
     left: 0;
     width: 100%;
     z-index: 1;
-  }
+}
 
 #navbar-pinterest img {
     height: 40px;
 }
 
-#navbar-right > div {
-    margin-left: 1rem;
+#navbar-right>div:hover>.dropdown-content {
+    display: block;
 }
 
-
-#navbar-right > div:hover > .dropdown-content {
-  display: block;
+#navbar-right>div>.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    z-index: 1;
 }
 
-#navbar-right > div > .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  z-index: 1;
+#navbar-right>div>.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-#navbar-right > div > .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-#navbar-right > div > .dropdown-content a:hover {
-  background-color: #f1f1f1;
+#navbar-right>div>.dropdown-content a:hover {
+    background-color: #f1f1f1;
 }
 
 #navbar-right {
@@ -54,8 +49,32 @@
     align-items: right;
 }
 
-#navbar-right div {
-    margin-left: 20px;
+.btn {
+  display: inline-block;
+  padding: 7px 13px;
+  font-size: 15px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #000;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.btnw {
+  display: inline-block;
+  padding: 7px 13px;
+  font-size: 15px;
+  font-weight: bold;
+  color: #131212;
+  background-color: #fff;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.8;
 }
 
 .finder {
@@ -67,7 +86,7 @@
     border: none;
     padding: 10px;
     font-size: 16px;
-    width: 300px;
+    width: 800px;
     border-radius: 20px;
     background-color: #f2f2f2;
     margin-left: 20px;
@@ -83,10 +102,10 @@
 #notifications,
 #message,
 #profile-img {
-  display: flex;
-  align-items: right;
-  margin-left: auto;
-  margin-right: 1rem;
+    display: flex;
+    align-items: right;
+    margin-left: auto;
+    margin-right: 1rem;
 }
 
 #content {
@@ -115,14 +134,14 @@
 }
 
 .card-buttons {
-  display: none;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 0.5rem;
-  transition: all 0.3s ease;
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0.5rem;
+    transition: all 0.3s ease;
 }
 
 #nav-buttons {
@@ -140,4 +159,20 @@
 
 #nav-buttons a:hover {
     color: #5f5f5f;
+}
+
+
+@media screen and (max-width: 768px) {
+    .finder {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .finder input {
+        width: 100%;
+    }
+
+    #content {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
